--- a/Src/tigers.html
+++ b/Src/tigers.html
@@ -18,7 +18,7 @@
         </header>
         <header class="bottom-header">
             <div class="logo">
-                <img src="TigersEyeLogo.png">
+                <img src="Images/ESP black bg new.png">
             </div>
         </header>
 
