--- a/Src/ParagonLP.html
+++ b/Src/ParagonLP.html
@@ -14,16 +14,16 @@
     <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #231F20;">
         
         <div class="container-fluid">
-            <a class="navbar-brand Logo" href="#">
+          <!--  <a class="navbar-brand Logo" href="#">
                 <img src="Images/PARAGON light logo.png" alt="Avatar Logo" style="width:50px;"> 
-            </a>
+            </a> -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#">Home</a>
+                <a class="nav-link " aria-current="page" href="ParagonLP.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About Us</a>
