--- a/Src/ParagonLP.html
+++ b/Src/ParagonLP.html
@@ -14,9 +14,9 @@
     <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #231F20;">
         
         <div class="container-fluid">
-          <!--  <a class="navbar-brand Logo" href="#">
-                <img src="Images/PARAGON light logo.png" alt="Avatar Logo" style="width:50px;"> 
-            </a> -->
+            <a class="navbar-brand Logo" href="#">
+                <img src="Images/paragon 2.png" alt="Avatar Logo" style="width:50px;"> 
+            </a> 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -35,5 +35,7 @@
           </div>
         </div> 
       </nav>
+
+      
   </body>
 </html>
