--- a/Src/ParagonLP.html
+++ b/Src/ParagonLP.html
@@ -35,7 +35,27 @@
           </div>
         </div> 
       </nav>
-
-      
+      <!-- Content Start HERE-->
+      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="1000">
+            <img src="Images/image 126.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="1000">
+            <img src="Images/ESP black bg new.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item"data-bs-interval="1000">
+            <img src="Images/ESP white original.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
   </body>
 </html>
