--- a/Src/esp.html
+++ b/Src/esp.html
@@ -6,7 +6,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Tiger's Eye Paragon</title>
-    <link rel="stylesheet" href="tigers.css">
+    <link rel="stylesheet" href="esp.css">
 </head>
 <body>
     <div class="wrapper">
@@ -22,10 +22,10 @@
                                 <a class="nav-link" href="ParagonLP.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="esp.html">About Us</a>
+                                <a class="nav-link" href="about.html">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact Us</a>
+                                <a class="nav-link" href="tigers.html">Contact Us</a>
                             </li>
                         </ul>
                     </div>
@@ -35,16 +35,12 @@
     
         <main class="main">
             <section class="first">
-              <h1>
-                Unveiling Unique Approaches<br>to Wealth and Well-Being.
-              </h1>
-              <p>Exploring Unconventional Ideas for Financial<br>Success and Life Mastery.</p>
-              <div class="FSbutton">
-                <a href="ParagonLP.html" class="btn btn-light">inquire now</a>
+              <img src="images/ESPbr.png" alt="img">
             </section>
 
             <section class="second">
-
+                <h1>About Us</h1>
+                <p>Exceptional Single Parent or ESP is headed by exceptional Tita Pau who raised her four (4) kids. Through the years, she remains the main nurturer and provider of her two daughters and two sons. She managed to send them to prestigious schools both local and abroad with her perseverance, excellence, and love for her children. Now that her children are establishing their own paths, Tita Pau remains to have a passionate heart in the sales industry. She is now helping other single parents, kids of solo parents, and young women achieve abundance by allowing spaces for them to realize their full potential.</p>
             </section>
         </main>
     
@@ -52,6 +48,5 @@
             <p>Tiger's Eye Paragon. &copy; 2024</p>
         </footer>
     </div>    
-
 </body>
 </html>
