--- a/Src/ParagonLP.html
+++ b/Src/ParagonLP.html
@@ -41,16 +41,16 @@
                   <img src="images/Cimg.png" class="d-block w-100" alt="img">
               </div>
               <div class="carousel-item">
-                  <img src="images/ESPw.png" class="d-block w-100" alt="img">
+                  <img src="images/Cimg.png" class="d-block w-100" alt="img">
               </div>
               <div class="carousel-item">
-                  <img src="images/POlogo.png" class="d-block w-100" alt="img">
+                  <img src="images/Cimg.png" class="d-block w-100" alt="img">
               </div>
           </div>
         </div>
         <section class="inner-first">
           <div class="image-container">
-            <img src="images/Plogoic.png" alt="logo">
+            <img src="images/PRG2LOGO-removebg-preview.png" alt="logo">
           </div>
           <h1>Lorem Ipsum</h1>
           <p>Lorem ipsum dolor sit amet. Id perferendis autem et dolorem itaque et quod quas in omnis totam est labore repellendus vel laboriosam unde. Sit voluptatem consequatur ex architecto.</p>
