--- a/Latest/ParagonLP.html
+++ b/Latest/ParagonLP.html
@@ -77,7 +77,7 @@
             <section class="TE-inner">
               <div class="image-tigers">
                 <img src="Imgs/tigers.png" alt="logo">
-              <h2>tiger's eye</h2>
+              <h2>burat</h2>
               <p>Lorem ipsum dolor sit amet. Id perferendis autem et dolorem itaque et quod quas in omnis totam est labore repellendus vel laboriosam unde. Sit voluptatem consequatur ex architecto.</p>  
               <div class="TEbutton">
                 <a href="tigers.html" class="btn btn-light">Explore Now</a>
