--- a/Src/ParagonLP.html
+++ b/Src/ParagonLP.html
@@ -52,7 +52,7 @@
           <div class="image-container">
             <img src="images/PRG2LOGO-removebg-preview.png" alt="logo">
           </div>
-          <h1>Lorem Ipsum</h1>
+          <h1>burat burat</h1>
           <p>Lorem ipsum dolor sit amet. Id perferendis autem et dolorem itaque et quod quas in omnis totam est labore repellendus vel laboriosam unde. Sit voluptatem consequatur ex architecto.</p>
           <div class="Fbutton">
             <a href="#" class="btn btn-light" onclick="scrollToSection(event, 'second-section')">
